--- a/TotallyWorkingBlazorShowcase/Pages/_Host.cshtml
+++ b/TotallyWorkingBlazorShowcase/Pages/_Host.cshtml
@@ -6,3 +6,4 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
