--- a/TotallyWorkingBlazorShowcase/Pages/Home.razor
+++ b/TotallyWorkingBlazorShowcase/Pages/Home.razor
@@ -1,1 +1,13 @@
 ﻿@page "/home"
+@inherits TotallyWorkingBlazorShowcase.Pages.HomeModel
+
+<link href="css/componentsStyle/TextStyle.css" rel="stylesheet">
+<link href="css/WindowsCustomStyle/Home.css" rel="stylesheet">
+<div class="main">
+    <header class="BaseTxt HeaderTxt" id="pink">Ура, вы регнулись</header>
+    <div class="Row">
+        <img src="css/Img and gif/catUwU.gif" class="Cat" alt="cat">
+        <img src="css/Img and gif/catUwU.gif" class="Cat" alt="cat">
+        <img src="css/Img and gif/catUwU.gif" class="Cat" alt="cat">
+    </div>
+</div>
