--- a/TotallyWorkingBlazorShowcase/Pages/_Host.cshtml
+++ b/TotallyWorkingBlazorShowcase/Pages/_Host.cshtml
@@ -6,4 +6,5 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
+<link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
