--- a/TotallyWorkingBlazorShowcase/_Imports.razor
+++ b/TotallyWorkingBlazorShowcase/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using TotallyWorkingBlazorShowcase
 @using TotallyWorkingBlazorShowcase.Shared
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
