--- a/TotallyWorkingBlazorShowcase/wwwroot/css/componentsStyle/Buttons.css
+++ b/TotallyWorkingBlazorShowcase/wwwroot/css/componentsStyle/Buttons.css
@@ -1,12 +1,11 @@
 ﻿.ButtonBase {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 16px;
     width: 100%;
     height: 48px;
-    border-radius: 8px;
+    border-radius: 6px;
     border: none;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
@@ -18,6 +17,12 @@
 .BlueButton {
     background: #194F90;
     color: #FFFFFF;
+}
+
+.GrayButton {
+    background: #DFE3EC;
+    border: 1px solid #9295A9;
+    color: #343D4B;
 }
 
 .LightBlueButton {
